--- a/Nequi/registrer.css
+++ b/Nequi/registrer.css
@@ -225,10 +225,6 @@ h3{
     
 }
 
-#mas{
-    border: none;
-
-}
 
 
 button{
@@ -247,25 +243,36 @@ button{
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    width: 50vh;
 }
 
 
 #mas{
     position: fixed;
     transform: translate(-50%,-20%);
-    left: 80%;
-    top: 70%;
+    left: 86%;
+    top: 47%;
     padding: 20px;
     border-radius: 10px;
+    z-index: 20;
+    display: flex;
+    background-color: white;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;;
 }
 
 .masIcon{
     display: flex;
+    flex-direction: column;
+    gap: 3vh;
+    box-sizing: border-box;
 }
+
 
 .masIcon button{
     width: 40px;
     font-size: 20px;
+    text-align: center;
+    align-content: center;
 }
 
 
@@ -277,7 +284,7 @@ button{
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    width: 400px;
+    width: 65vh;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -298,12 +305,14 @@ p{
     width: 50vh;
     box-sizing: border-box;
     background-color: var(--color_nequi);
-    border-radius: 4px;
+    border-radius: 10px;
     padding: 20px;
     color: var(--blanco_nequi);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     
 }
 
 .candado{
     font-size: 18px;    
 }
+
