--- a/Nequi/registrer.css
+++ b/Nequi/registrer.css
@@ -1,454 +1,415 @@
-
-:root{
-    --color_nequi:#6723ba;
-    --blanco_nequi:#ECF3F8;
-    --gris_nequi: #ECE7F5;
-    --fuente-total:"Manrope";
-    --green:#fff0;
-    --white:#ffff;
-    --gris-gris:#454444;
-    
+:root {
+  --color_nequi: #6723ba;
+  --blanco_nequi: #ecf3f8;
+  --gris_nequi: #ece7f5;
+  --fuente-total: "Manrope";
+  --green: #fff0;
+  --white: #ffff;
+  --gris-gris: #454444;
 }
 
-.container{
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    background:linear-gradient(var(--color_nequi),#5c1ec0);
-    box-sizing: border-box;
-    width: 70vh;
-    
-    
+.container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  background: linear-gradient(var(--color_nequi), #5c1ec0);
+  box-sizing: border-box;
+  width: 70vh;
 }
 
-
-body{
-    margin: auto;
-    font-family: var(--fuente-total);
-    /* cursor: url(""), auto;  */
-    color-scheme: light dark;
-    display: flex;
-    justify-content: center;
-    background:linear-gradient(var(--color_nequi),#5f27b9);
-   
+body {
+  margin: auto;
+  font-family: var(--fuente-total);
+  /* cursor: url(""), auto;  */
+  color-scheme: light dark;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(var(--color_nequi), #5f27b9);
 }
 
-html{
-    margin: 0;
-    font-family: var(--fuente-total), Calibri, 'Trebuchet MS', sans-serif;
-    
+html {
+  margin: 0;
+  font-family: var(--fuente-total), Calibri, "Trebuchet MS", sans-serif;
 }
 
-
-
-
-.navbar{
-    background-color:var(--color_nequi);
-    padding: 10px 30px;
-    display: flex;
-    flex-direction: row;
-    z-index: 20;
-    color: white;
-    align-items: center;
-    box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    
+.navbar {
+  background-color: var(--color_nequi);
+  padding: 10px 30px;
+  display: flex;
+  flex-direction: row;
+  z-index: 20;
+  color: white;
+  align-items: center;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
 }
 
-.navbar div a{
-    margin: 5px;
-    background-color: var(--color_nequi);
+.navbar div a {
+  margin: 5px;
+  background-color: var(--color_nequi);
 }
 
-
-.logo-menu{
-    font-size: 20px;
-    color: #ECE7F5;
+.logo-menu {
+  font-size: 20px;
+  color: #ece7f5;
 }
 
-
-.datos{
-    justify-content: center;
-    text-align: center;
-    padding: 6.74em;
-    color: white;
-    
+.datos {
+  justify-content: center;
+  text-align: center;
+  padding: 6.74em;
+  color: white;
 }
 
-
-.boton{
-    background-color: var(--blanco_nequi);
-    color: var(--color_nequi);
-    border: none;
-    padding: 10px 20px;
-    border-radius: 20px;
-    
+.boton {
+  background-color: var(--blanco_nequi);
+  color: var(--color_nequi);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
 }
 
-
-.main{
-    border-top-right-radius: 1em;
-    background-color: rgb(255, 255, 255);
-    border-top-left-radius: 1em;
-    padding: 1.74em;
-}
-.opciones{
-    display:flex;
-    justify-content: space-around;
+.main {
+  border-top-right-radius: 1em;
+  background-color: rgb(255, 255, 255);
+  border-top-left-radius: 1em;
+  padding: 1.74em;
 }
 
-.opcion{
-    background-color: var(--gris_nequi);
-    width: 1em;
-    padding: 1em;
-    font-size: 20px;
-    border-radius: 20px;
-    text-align: center;
-    
+.opciones {
+  display: flex;
+  justify-content: space-around;
 }
 
-.letras_opciones{
-    color: aqua;
-    
+.opcion {
+  background-color: var(--gris_nequi);
+  width: 1em;
+  padding: 1em;
+  font-size: 20px;
+  border-radius: 20px;
+  text-align: center;
 }
 
-
-
-.movimientos{
-    padding-top: 3em;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
-    gap: 15px;
-    
+.letras_opciones {
+  color: aqua;
 }
 
-.movimientos button{
-    background-color: var(--color_nequi);
-    border-radius: 15px;
-    background-color: rgba(99, 33, 211, 0.2);
-    justify-content: center;
-    text-align: center;
-    padding: 20px;
-    justify-content: center;
+.movimientos {
+  padding-top: 3em;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 15px;
 }
 
-
-.movimientos button span{
-    display: block;
-    color: var(--gris-gris);
-    font-size: 15px;
+.movimientos button {
+  background-color: var(--color_nequi);
+  border-radius: 15px;
+  background-color: rgba(99, 33, 211, 0.2);
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  justify-content: center;
 }
 
-.trasferencias{
-    display: flex;
-    margin: 1em;
-    justify-content: space-evenly;
-    
+.movimientos button span {
+  display: block;
+  color: var(--gris-gris);
+  font-size: 15px;
 }
 
-.trasferencia{
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--green);
+.trasferencias {
+  display: flex;
+  margin: 1em;
+  justify-content: space-evenly;
 }
 
-h6{
-    padding: 0;
-    margin: 0;
+.trasferencia {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--green);
 }
 
-h3{
-    padding:0;
+h6 {
+  padding: 0;
+  margin: 0;
 }
 
-
-.recibir{
-    color: var(--green_);
+h3 {
+  padding: 0;
 }
 
-.flechas_green{
-    font-size: 30px;
-    color:green;
-    align-content: center;
-    background-color: var(--green);
+.recibir {
+  color: var(--green_);
 }
 
-.flechas_red{
-    font-size: 30px;
-    color:rgb(255, 4, 4);
-    align-content: center;
+.flechas_green {
+  font-size: 30px;
+  color: green;
+  align-content: center;
+  background-color: var(--green);
 }
 
-
-.consignar{
-    display: flex;
-    position: fixed;
-    padding: 2em;
-    color: black;
-    flex-direction: column;
-    background-color: white;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 10px;
-    box-shadow: 0px 2px 2px 1px var(--gris_nequi);
-    height: auto;
-    width: 50%;
-    max-width: 400px;
+.flechas_red {
+  font-size: 30px;
+  color: rgb(255, 4, 4);
+  align-content: center;
 }
 
-.esconder{
-    display: none;
-    opacity: 0;
-    visibility: hidden;
+.consignar {
+  display: flex;
+  position: fixed;
+  padding: 2em;
+  color: black;
+  flex-direction: column;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  box-shadow: 0px 2px 2px 1px var(--gris_nequi);
+  height: auto;
+  width: 50%;
+  max-width: 400px;
 }
 
-#consignar{
-    border: none;
-    background-color: white;
+.esconder {
+  display: none;
+  opacity: 0;
+  visibility: hidden;
 }
 
-.input{
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    height: 40px;
-    width: 100%;
-    justify-content: center;
-    background-color: var(--gris_nequi);
-    margin: 5px 0 ;
-    padding: 4px 10px;
-    box-sizing: border-box;
-    
-    
+#consignar {
+  border: none;
+  background-color: white;
 }
 
-
-.input:hover{
-    border: none;
-    background-color: var(--gris_nequi);
-    transition: all ease 1s;
+.input {
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  height: 40px;
+  width: 100%;
+  justify-content: center;
+  background-color: var(--gris_nequi);
+  margin: 5px 0;
+  padding: 4px 10px;
+  box-sizing: border-box;
 }
 
-
-#cerrar{
-    display: flex;
-    border-radius: 1px;
-    background-color: #ffffff;
-    color: rgb(73, 73, 73);
-    border: none;
-    padding: 5px;
-    
+.input::placeholder {
+  color: #520ebe;
 }
 
-
-#seguir{
-    background-color: var(--color_nequi);
-    border-radius: 1px;
-    border: none;
-    padding: 10px;
-    color: white;
-    text-align: center;
-    width: 100%;
-    margin-top: 5px;
-    align-self: center;
-    border-radius: 8px;
-    
+.input:hover {
+  border: none;
+  background-color: var(--gris_nequi);
+  transition: all ease 1s;
 }
 
-#seguir:hover{
-    background-color: #F1BFDA;
-    color: var(--color_nequi);
-    transition: all ease 1s;
-    
+#cerrar {
+  display: flex;
+  border-radius: 1px;
+  background-color: #ffffff;
+  color: rgb(73, 73, 73);
+  border: none;
+  padding: 5px;
 }
 
-
-
-button{
-    background-color: white;
-    border: none;
+#seguir {
+  background-color: var(--color_nequi);
+  border-radius: 1px;
+  border: none;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  width: 100%;
+  margin-top: 5px;
+  align-self: center;
+  border-radius: 8px;
 }
 
-.recargar{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: black;
-    background-color: white;
-    padding: 20px;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    width: 50vh;
+#seguir:hover {
+  background-color: #f1bfda;
+  color: var(--color_nequi);
+  transition: all ease 1s;
 }
 
-
-#mas{
-    position: fixed;
-    transform: translate(-50%,-20%);
-    left: 86%;
-    top: 47%;
-    padding: 20px;
-    border-radius: 10px;
-    z-index: 20;
-    display: flex;
-    background-color: white;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;;
+button {
+  background-color: white;
+  border: none;
 }
 
-.masIcon{
-    display: flex;
-    flex-direction: column;
-    gap: 3vh;
-    box-sizing: border-box;
+.recargar {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  background-color: white;
+  padding: 20px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  width: 50vh;
 }
 
-
-.masIcon button{
-    width: 40px;
-    font-size: 20px;
-    text-align: center;
-    align-content: center;
+#mas {
+  position: fixed;
+  transform: translate(-50%, -20%);
+  left: 86%;
+  top: 47%;
+  padding: 20px;
+  border-radius: 10px;
+  z-index: 20;
+  display: flex;
+  background-color: white;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-
-.card{
-    top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    position: fixed;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    width: 67vh;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    -webkit-box-shadow: -2px 2px 10px -4px rgba(0, 0, 0, 0.37);
-    -moz-box-shadow: -2px 2px 10px -4px rgba(0, 0, 0, 0.37);
-    box-shadow: -2px 2px 10px -4px rgba(0, 0, 0, 0.37);;
-    
+.masIcon {
+  display: flex;
+  flex-direction: column;
+  gap: 3vh;
+  box-sizing: border-box;
 }
 
-
-p{
-    margin: 8px 0 0 0;
-    font-size: 1.20em;
-    
+.masIcon button {
+  width: 40px;
+  font-size: 20px;
+  text-align: center;
+  align-content: center;
 }
 
-
-.tarjeta{
-    width: 50vh;
-    box-sizing: border-box;
-    background: linear-gradient(var(--color_nequi),#520ebe);
-    border-radius: 10px;
-    padding: 20px;
-    color: var(--blanco_nequi);
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-    display: flex;
-    flex-direction: column;
-    
+.card {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 67vh;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  -webkit-box-shadow: -2px 2px 10px -4px rgba(0, 0, 0, 0.37);
+  -moz-box-shadow: -2px 2px 10px -4px rgba(0, 0, 0, 0.37);
+  box-shadow: -2px 2px 10px -4px rgba(0, 0, 0, 0.37);
 }
 
-.candado{
-    font-size: 18px;    
-}
-.opciones button{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-content: center;
-    align-items: center;
-    gap: 5px;
+p {
+  margin: 8px 0 0 0;
+  font-size: 1.2em;
 }
 
-.opciones button span{
-    text-align: center;
-    color: var(--color_nequi);
-    font-size: 10;
-    font-weight: lighter;
-    font-family: system-ui;
+.tarjeta {
+  width: 50vh;
+  box-sizing: border-box;
+  background: linear-gradient(var(--color_nequi), #520ebe);
+  border-radius: 10px;
+  padding: 20px;
+  color: var(--blanco_nequi);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  display: flex;
+  flex-direction: column;
 }
 
-.tarjeta-info{
-    display: flex;
-    justify-content:space-between;
+.candado {
+  font-size: 18px;
 }
 
-.tarjeta-info span{
-    display: block;
-    font-style: italic;
+.opciones button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
-.tarjeta-info-adv{
-    font-size: 14px;
-    font-style: italic;
+.opciones button span {
+  text-align: center;
+  color: var(--color_nequi);
+  font-size: 10;
+  font-weight: lighter;
+  font-family: system-ui;
 }
 
-footer{
-    background-color: var(--gris_nequi);
-    width: 100%;
-    border-top-left-radius: 1em;
-    border-top-right-radius: 1em;
+.tarjeta-info {
+  display: flex;
+  justify-content: space-between;
 }
 
-.recarga-input{
-    margin-top: 2vh;
-    background-color: var(--gris_nequi);
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    padding: 2vh;
-    color: var(--gris-gris);
+.tarjeta-info span {
+  display: block;
+  font-style: italic;
 }
 
-.recarga-input::placeholder{
-    font-size: 13px;
-}
-.recarga-span{
-    padding-top: 20px;
-    font-size: 13px;
+.tarjeta-info-adv {
+  font-size: 14px;
+  font-style: italic;
 }
 
-.recargar-div{
-    box-sizing: border-box;
+footer {
+  background-color: var(--gris_nequi);
+  width: 100%;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
 }
 
-.recargar-div div{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    justify-items: center;
-    align-items: center;
+.recarga-input {
+  margin-top: 2vh;
+  background-color: var(--gris_nequi);
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 2vh;
+  color: var(--gris-gris);
 }
 
-
-.recargar-checkbox{
-    color: #5c1ec0;
-    background-color: #6723ba;
-    
-    margin-right: 20px;
-    
-    
-    
+.recarga-input::placeholder {
+  font-size: 13px;
 }
 
-.recargar-div span{
-    margin: 0;
-    padding: 0;
-    font-size: 12px;
-    font-weight: 800;
-    margin-left: 10px;
+.recarga-span {
+  padding-top: 20px;
+  font-size: 13px;
 }
-article{
-    margin-top: 20px;
-    font-size: 10px;
+
+.recargar-div {
+  box-sizing: border-box;
+}
+
+.recargar-div div {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-items: center;
+  align-items: center;
+}
+
+.recargar-checkbox {
+  color: #5c1ec0;
+  background-color: #6723ba;
+
+  margin-right: 20px;
+}
+
+.recargar-div span {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  font-weight: 800;
+  margin-left: 10px;
+}
+
+article {
+  margin-top: 20px;
+  font-size: 10px;
 }
