--- a/Nequi/registrer.css
+++ b/Nequi/registrer.css
@@ -170,10 +170,10 @@ h3 {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 10px;
-  box-shadow: 0px 2px 2px 1px var(--gris_nequi);
   height: auto;
   width: 50%;
   max-width: 400px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .esconder {
@@ -200,9 +200,7 @@ h3 {
   box-sizing: border-box;
 }
 
-.input::placeholder {
-  color: #520ebe;
-}
+
 
 .input:hover {
   border: none;
@@ -249,12 +247,14 @@ button {
   transform: translate(-50%, -50%);
   color: black;
   background-color: white;
-  padding: 20px;
+  padding: 3vw;
   position: fixed;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  width: 50vh;
+  width: 30vw;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-sizing: border-box;
 }
 
 #mas {
@@ -336,7 +336,7 @@ p {
 .opciones button span {
   text-align: center;
   color: var(--color_nequi);
-  font-size: 10;
+  font-size: 15px;
   font-weight: lighter;
   font-family: system-ui;
 }
@@ -384,6 +384,9 @@ footer {
 
 .recargar-div {
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .recargar-div div {
@@ -397,15 +400,14 @@ footer {
 .recargar-checkbox {
   color: #5c1ec0;
   background-color: #6723ba;
-
   margin-right: 20px;
 }
 
 .recargar-div span {
   margin: 0;
   padding: 0;
-  font-size: 12px;
-  font-weight: 800;
+  font-size: 15px;
+  font-weight: light;
   margin-left: 10px;
 }
 
@@ -413,3 +415,14 @@ article {
   margin-top: 20px;
   font-size: 10px;
 }
+
+
+.button-recarge{
+  color: #ffff;
+  background-color: var(--color_nequi);
+  padding: 10px;
+  border-radius: 1rem;
+  border: transparent;
+  margin-top: 10px;
+}
+
